--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,21 @@
     <h1>Welcome to Dev Match</h1>
     <h3>A membership site for bla bla</h3>
 </div>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="well">
+            <h2 class="text-center">Basic membership</h2>
+            <h4 class="text-center">Sign up for free and get basic access</h4>
+            <%= link_to "Sign up free", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="well">
+            <h2 class="text-center">Pro membership</h2>
+            <h4 class="text-center">Sign up for the pro account for 10$/month and get full access</h4>
+            <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+         </div>
+    </div>
+    
+</div>
