--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,14 +8,14 @@
         <div class="well">
             <h2 class="text-center">Basic membership</h2>
             <h4 class="text-center">Sign up for free and get basic access</h4>
-            <%= link_to "Sign up free", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+            <%= link_to "Sign up free", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
         </div>
     </div>
     <div class="col-md-6">
         <div class="well">
             <h2 class="text-center">Pro membership</h2>
             <h4 class="text-center">Sign up for the pro account for 10$/month and get full access</h4>
-            <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+            <%= link_to "Sign up", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
          </div>
     </div>
     
